--- a/style.css
+++ b/style.css
@@ -1,22 +1,32 @@
 [class*="col-"] {
     width: 100%;
+    background: blue;
+    height: 50px;
 }
 
 @media only all and (min-width: 800px) {
     .col-1{
-        background-color: black;
+        background-color: rgb(255, 0, 0);
         width: 25%;
+        height: 50px;
+        float: left;
     }
     .col-2{
-        background-color: black;
+        background-color: rgb(0, 255, 42);
         width: 50%;
+        height: 50px;
+        float: left;
     }
     .col-3{
-        background-color: black;
+        background-color: rgb(4, 0, 255);
         width: 75%;
+        height: 50px;
+        float: left;
     }
     .col-4{
-        background-color: black;
+        background-color: rgb(255, 0, 128);
         width: 100%;
+        height: 50px;
+        float: left;
     }
 }
