--- a/print.css
+++ b/print.css
@@ -1,11 +1,24 @@
-@media print {
+@media print and (color){
     .f{
-        width: 33.3%;
+        width: 33.3% !important;
+        height: 50px !important;
+        background-color: blueviolet !important;
+        -webkit-print-color-adjust:exact;
+        float: left;
+        
     }
     .s{
         width: 66.6%;
+        height: 50px;
+        background-color: red;
+        -webkit-print-color-adjust:exact;
+        float: left;
     }
     .t{
         width: 100%;
+        height: 50px;
+        background-color: yellow;
+        -webkit-print-color-adjust:exact;
+        float: left;
     }
 }
